--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # replace @ in username with %40
-mail.receive.username=check%40webifier.de
-mail.receive.password=krs0T4#6
-mail.receive.host=ha01s015.org-dns.com
-mail.receive.port=993
+mail.receive.username=
+mail.receive.password=
+mail.receive.host=
+mail.receive.port=
 
-mail.send.username=check@webifier.de
-mail.send.password=krs0T4#6
-mail.send.host=ha01s015.org-dns.com
-mail.send.port=465
+mail.send.username=
+mail.send.password=
+mail.send.host=
+mail.send.port=
 
 mail.outgoing.from=webifier <noreply@webifier.de>
